# fastapi-ecommerce

./: README.md  config.py  main.py  prestart.sh  pyproject.toml  run.sh
alembic/: env.py  script.py.mako
alembic/versions/: 0197809287c7_set_users_is_active_to_true_as_default.py  0f3baa74c56e_drop_back_populates_in_favour_of_back_.py  187e5d694a81_add_country_relationship_to_.py  2d33649a39e0_modify_userrole_model.py  2e7b844e8ef1_add_scoper_to_userrole_model.py  31bcde054202_migrate_all_models_from_column_to_.py  32c68bd854b8_remove_deleted_column_in_.py  349992158dd7_change_date_joined_first_and_last_name_.py  3a173b30441a_create_country_and_currency_models.py  49044053cb73_add_relationship_between_currency_and_.py  49c65c3bc99a_make_email_optional_field.py  61a455229eb5_init.py  6250790bbec3_move_authentication_to_user.py  65f8e1a0b852_add_relationship_to_currency_in_country.py  66e591c6c17d_overhaul_userrole_model.py  7589b3275af5_set_cascade_on_delete_for_userrole_model.py  7ccf1b18fc57_add_relationship_in_country_to_currency.py  91728cc9c074_modify_models_related_to_user_to_have_.py  91f0c89554bf_create_user_roles_model.py  95c65e9f0cd5_update_column_to_mapped_column.py  99f992db3864_create_authtoken_model.py  a92014f5dd9d_rename_authtoken_model_columns_rename_.py  b457c3be5051_fix_possible_relationship_issue_in_.py  b63bbb5b2a5f_add_country_id_fk_to_user_model.py  b7be6648a699_rename_business_model_to_.py  bbec350c4265_moved_userrole_model.py  c1ed7655af2f_upgrade_authtoken_model_to_use_mapped_.py  c965dfb7e3b2_remove_country_relationship_in_.py  c9de8d6da120_create_column_property_in_base_model.py  cc57d59f00d5_test_custom_migration_is_created.py  cc85290b2c26_change_authtoken_column_to_datetime_.py  daefc1309af9_email_is_nullable_and_change_authtoken_.py  dc80cf21ddfe_remove_relationship_in_currency.py  e65ac8b12f76_change_scope_column_type.py  ed0230c69a38_modify_userrole_column.py  effb2e0d742d_rename_scope_model.py
app/: backend_pre_start.py  main.py
app/auth/: api.py  constants.py  models.py  permissions.py
app/business/: constants.py  (+1 more)
(+83 files in other folders)
