[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["waruingugi <waruingugientp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^0.21.1"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
phonenumbers = "^8.13.4"
pydantic = {extras = ["email"], version = "^1.10.4"}
tenacity = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
